Quick Table demo bug squash

--- a/output.css
+++ b/output.css
@@ -2211,6 +2211,10 @@ body {
   padding-top: 1.5rem;
 }
 
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
 .text-left {
   text-align: left;
 }
